# CodePulse

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: App.tsx  api.ts  status.test.ts  status.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  model.rs  provider.rs
