[package]
name = "codepulse"
version = "0.2.0"
description = "A calm desktop status light for Codex"
authors = ["CodePulse"]
edition = "2021"

[lib]
name = "codepulse_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sysinfo = "0.33"
dirs = "6"
chrono = "0.4"
tokio = { version = "1", features = ["time", "sync"] }
notify = "7"
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = "3"
